Fix checkbox and radio alignment

--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -50,7 +50,8 @@ input:not([type='checkbox']):not([type='radio']), select {
     height: 36px;
 }
 
-input[type='checkbox'] {
+input[type='checkbox'], input[type='radio'] {
+    position: relative;
     display: inline-block;
     appearance: none;
     width: 20px;
@@ -58,50 +59,50 @@ input[type='checkbox'] {
     background-color: white;
     border: 1px solid blue;
     outline: none;
-    margin-right: 5px;
-    &:before {
-        content: "✔";
+    margin: 5px 5px -5px 0px;
+}
+input[type='checkbox'] {
+    &::before {
         width: 18px;
+        text-align: center;
+        display: block;
+        color: white;
+        font-weight: bold;
+        content: "✔";
         padding-top: 2px;
         line-height: 16px;
-        text-align: center;
-        display: inline-block;
-        color: white;
     }
     &:checked::before {
         color: blue;
     }
-    label:hover>&::before, &:focus::before {
-        font-weight: bold;
-        border: 1px solid blue;
-        line-height: 14px;
+    label:hover>&, label:focus>&, &:hover, &:focus {
+        border-width: 2px;
+        &::before {
+            line-height: 14px;
+            width: 16px;
+        }
     }
 }
 
 input[type='radio'] {
-    display: inline-block;
-    appearance: none;
-    width: 20px;
-    height: 20px;
     border-radius: 10px;
-    background-color: white;
-    border: 1px solid blue;
-    outline: none;
-    margin-right: 5px;
-    &:before {
+    &::before {
         content: "";
-        width: 10px;
-        height: 10px;
-        margin: 4px;
-        border-radius: 5px;
         display: block;
+        position: absolute;
+        height: 10px;
+        width: 10px;
+        border-radius: 5px;
+        margin: 4px;
+        background-color: blue;
+        opacity: 0;
     }
     &:checked::before {
-        background-color: blue;
+        opacity: 1;
     }
-    &:hover, &:focus {
+    label:hover>&, label:focus>&, &:hover, &:focus {
         border-width: 2px;
-        &:before {
+        &::before {
             margin: 3px;
         }
     }
